@@ -57,7 +57,7 @@ The TCK is a test library that includes four types of packages:
 - `ee.jakarta.tck.concurrent.api.*` these are basic API tests that ensure methods throw the correct exceptions and return the valid values.
 - `ee.jakarta.tck.concurrent.spec.*` these are more complex SPEC tests that ensure that implementations behave as expected based on the specification.
 - `ee.jakarta.tck.concurrent.common.*` these are common packages shared between test packages.
-- `ee.jakarta.tck.concurrent.framework` this package is an abstraction layer to make writing tests using TestNG, Arquillian, and java.util.logging easier.
+- `ee.jakarta.tck.concurrent.framework` this package is an abstraction layer to make writing tests using TestNG, Arquillian, SigTest, and java.util.logging easier.
 
 ### What is not included
 The TCK uses but does not provide the necessary application servers, test frameworks, APIs, SPIs, or implementations required to run. 
@@ -81,6 +81,7 @@ Some of these dependencies will depend on the application server you are using, 
 comments have been added to this sample describing the customizations necessary.
 
 Example /pom.xml:
+
 ```xml
 <!-- The Arquillian test framework -->
 <dependencyManagement>
@@ -134,6 +135,7 @@ will also need access to the TestNG library and the Derby JDBC driver for databa
 The `Test Server` dependencies are copied over during the build phase.
 
 Example /pom.xml:
+
 ```xml
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
@@ -172,6 +174,7 @@ TestNG needs to be configured to know which packages contain tests to run.
 This configuration is done via a configuration file. 
 
 Example /src/test/resources/tck-suite.xml: 
+
 ```xml
 <!DOCTYPE suite SYSTEM "http://testng.org/testng-1.0.dtd" >
 
@@ -186,6 +189,7 @@ Example /src/test/resources/tck-suite.xml:
 ```
 
 Example /pom.xml:
+
 ```xml
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
@@ -210,6 +214,7 @@ Application Servers that implement the Arquillian SPI use a configuration file t
 These properties will allow Arquillian to connect to the application server, install applications, and get test results.
 
 Example src/test/resources/arquillian.xml:
+
 ```xml
 <arquillian xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns="http://jboss.org/schema/arquillian"
@@ -232,9 +237,57 @@ The TCK uses default objects (`java:comp/DefaultManagedExecutorService`) and ann
 to ensure that application servers require minimal customization to run the TCK.
 
 However, the TCK does require that Application Servers define a security context for security-based tests. 
+
 - Username: javajoe
 - Password: javajoe
 - Group: Manager
+
+The TCK uses external libraries that also need to be available on the Application Server's class path. 
+
+- org.apache.derby:derby - For database testing
+- org.testng:testng - For test assertions
+- org.netbeans.tools:sigtest-maven-plugin - For signature testing
+
+
+### Signature Tests
+
+The Concurrency TCK will run signature tests on the application server itself, and not as part of a separate plugin.
+This means that the signature tests will be ran during the maven `test` phase.
+
+You need to configure your application server with a JVM property `-Djimage.dir=<path-your-server-has-access-to>`.
+When running the signature tests on JDK 9+ we need to convert the JDK modules back into class files for signature testing.
+
+The signature test plugin we use will also attempt to perform reflective access of classes, methods, and fields.
+Due to the new module system in JDK 9+ special permissions need to be added in order for these tests to run: 
+
+If you are using a Security Manager add the following permissions to the `sigtest-maven-plugin`:
+
+```txt
+permission java.lang.RuntimePermission "accessClassInPackage.jdk.internal";
+permission java.lang.RuntimePermission "accessClassInPackage.jdk.internal.reflect";
+permission java.lang.RuntimePermission "accessClassInPackage.jdk.internal.vm.annotation";
+```
+
+By default the java.base module only exposes certain classes for reflective access. 
+It has been observed that the Concurrency TCK test will need access to the jdk.internal.vm.annotation class.
+To give the `sigtest-maven-plugin` access to this class set the following JVM properties: 
+
+```properties
+--add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+--add-opens java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+```
+
+Some JDKs will mistake the space in the prior JVM properties as delimiters between properties
+In this case use:
+
+```properties
+--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+```
+
+
+For more information about generating the signature test file, and how the test run read: [ee.jakarta.tck.concurrent.framework.signaturetest/README.md][src/main/java/ee/jakarta/tck/concurrent/framework/signaturetest/README.md]
+
 
 ### Advanced Configuration
 
